# Krot

./: README.md
krot-backend/: .gitignore  pom.xml
krot-backend/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
krot-backend/src/main/resources/: application.yml
krot-terminal/: .gitignore  angular.json  package-lock.json  package.json
krot-terminal/src/: index.html  main.ts  styles.css
krot-terminal/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
krot-terminal/src-tauri/src/: lib.rs  main.rs
krot-terminal/src-tauri/src/client/: client.rs  confidential.rs  error.rs  mod.rs
krot-terminal/src-tauri/src/client/api/: mod.rs  model.rs  request_model.rs  response_model.rs
krot-terminal/src-tauri/src/client/types/: converters.rs  mod.rs  serde_helpers.rs
krot-terminal/src-tauri/src/commands/: connection.rs  error.rs  mod.rs  sysinfo.rs
krot-terminal/src-tauri/src/crypto/: cipher.rs  ephemeral.rs  error.rs  mod.rs
krot-terminal/src-tauri/src/security/: error.rs  keystore.rs  mod.rs
krot-terminal/src/app/: app.component.ts  app.config.ts  app.routes.ts
krot-terminal/src/app/core/models/: application.ts  common.ts  window.ts
krot-terminal/src/app/core/services/: window.service.ts
krot-terminal/src/app/features/auth/: auth.component.html  auth.component.spec.ts  auth.component.ts  auth.html  auth.ts
krot-terminal/src/app/features/devices/: devices.ts
krot-terminal/src/app/features/terminal/: terminal.component.html  terminal.component.spec.ts  terminal.component.ts
(+139 files in other folders)
