[package]
name = "krot-terminal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "krot_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.11.0-rc.3"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
rand_core = "0.10.1"
hkdf = "0.13.0"
sha2 = "0.11.0"
keyring = "4.1.2"
base64 = "0.22.1"
reqwest = "0.13.4"
rand = "0.10.1"
bytes = "1.11.1"
tokio = { version = "1.52.3", features = ["full"] }
battery = "0.7.8"

[profile.release]
strip = true
panic = "abort"

[profile.dev]
incremental = true
debug = true
opt-level = 0
